--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,6 +16,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+  
+    defaults:
+      run:
+        working-directory: ./example-app
 
     steps:
     - uses: actions/checkout@v3
@@ -23,11 +27,15 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Install Poetry Action
+      uses: snok/install-poetry@v1.3.3
+      with:
+        version: latest # default is latest
+        virtualenvs-create: true # optional, default is true
+        virtualenvs-in-project: true # optional, default is false
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        poetry install
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
