--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,5 +1,8 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# separate building dependencies : poetry install, project dependencies
+# separate static test of code: linter, formatter, security
+# separate unit tests
 
 name: Python application
 
@@ -55,8 +58,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
+    - name: Install Poetry Action
+      uses: snok/install-poetry@v1.3.3
     - name: Cache load venv
       id: cached-poetry-dependencies
       uses: actions/cache@v3
@@ -81,8 +84,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
+    - name: Install Poetry Action
+      uses: snok/install-poetry@v1.3.3
     - name: Cache load venv
       id: cached-poetry-dependencies
       uses: actions/cache@v3
@@ -107,8 +110,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
+    - name: Install Poetry Action
+      uses: snok/install-poetry@v1.3.3
     - name: Cache load venv
       id: cached-poetry-dependencies
       uses: actions/cache@v3
@@ -119,7 +122,7 @@ jobs:
       run: |
         source $VENV poetry run task security
         
-  tests:
+  unittests:
     runs-on: ubuntu-latest
     needs: [lint, formatter, security]
     defaults:
