--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,10 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ "ubuntu-latest", "windows-latest" ]
+    runs-on: ${{ matrix.os }}
     defaults:
       run:
         working-directory: ./example-app
@@ -45,7 +48,10 @@ jobs:
         key: ${{ runner.os }}-venv
         
   lint:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ "ubuntu-latest", "windows-latest" ]
+    runs-on: ${{ matrix.os }}
     concurrency:
       group: analysis
     needs: build
@@ -71,7 +77,10 @@ jobs:
         source $VENV poetry run task lint
         
   formatter:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ "ubuntu-latest", "windows-latest" ]
+    runs-on: ${{ matrix.os }}
     concurrency:
       group: analysis
     needs: build  
@@ -97,7 +106,10 @@ jobs:
         source $VENV poetry run task formatter
         
   security:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ "ubuntu-latest", "windows-latest" ]
+    runs-on: ${{ matrix.os }}
     concurrency:
       group: analysis
     needs: build
@@ -123,7 +135,10 @@ jobs:
         source $VENV poetry run task security
         
   unittests:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ "ubuntu-latest", "windows-latest" ]
+    runs-on: ${{ matrix.os }}
     needs: [lint, formatter, security]
     defaults:
       run:
