--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,7 +36,7 @@ jobs:
         version: latest # default is latest
         virtualenvs-create: true # optional, default is true
         virtualenvs-in-project: true # optional, default is false
-        installer-parallel: true
+#        installer-parallel: true
     - name: Install dependencies
       run: |
         poetry install --no-root
